# snakemake-logger-plugin-sqlite

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/snakemake_logger_plugin_sqlite/: __init__.py  debug_handler.py  events.py  handler.py  parsers.py
src/snakemake_logger_plugin_sqlite/db/: session.py
src/snakemake_logger_plugin_sqlite/models/: __init__.py  error.py  job.py  workflow.py
tests/: test_models.py
