[project]
name = "snakemake-logger-plugin-sqlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cade Mirchandani", email = "cmirchan@ucsc.edu" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "snakemake-interface-logger-plugins>=1.0.0",
    "sqlalchemy>=2.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
