[project]
name = "snakemake-logger-plugin-sqlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cade Mirchandani", email = "cmirchan@ucsc.edu" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "snakemake-interface-logger-plugins>=1.0.0",
    "sqlalchemy>=2.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "snakemake-interface-logger-plugins",
    "snakemake",
    "ruff>=0.9.10",
]

[tool.uv.sources]
snakemake-interface-logger-plugins = { git = "https://github.com/snakemake/snakemake-interface-logger-plugins", branch = "main" }
snakemake = { git = "https://github.com/cademirch/snakemake", branch = "logging-refactor" }
